
[build-system]
requires = ["setuptools>=61.0","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "ess_dgbuild"
dynamic = ["version"] # Version based on git tag...
#... not static: version = "0.0.1"
authors = [
  { name="Thomas Kittelmann", email="thomas.kittelmann@ess.eu" },
]
description = "Build system for the ESS-detector group coding framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]
dependencies = [
    #Very light-weight, not a big deal if we happen to install with both conda and pip:
    'tomli; python_version < "3.11"'
]

[project.optional-dependencies]
all = [
    #Non-trivial dependencies which is most likely already installed in conda
    #(if we actually make conda-packages, we can move these up to the
    #non-optional dependencies above):
   'pybind11 >= 2.10.4',
    'cmake >= 3.24.2'
]

[project.urls]
"Homepage" = "https://github.com/mctools/dgbuild"
"Bug Tracker" = "https://github.com/mctools/dgbuild/issues"

[project.scripts]
dgbuild2 = "ess_dgbuild_internals._cli_dgbuild:main"
unwrapped_dgbuild2 = "ess_dgbuild_internals._cli_dgbuild:unwrapped_main"
dgtests2 = "ess_dgbuild_internals._cli_dgtests:main"
dgenv2 = "ess_dgbuild_internals._cli_dgbuild:dgenv_main"
dgrun2 = "ess_dgbuild_internals._cli_dgbuild:dgrun_main"
